✨ Add CompetitionButton component and update styles

--- a/app.json
+++ b/app.json
@@ -25,6 +25,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": ["/assets/fonts/NotoSansKR-Black.ttf"]
+        }
+      ]
+    ]
   }
 }
