--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
+    "react-native-touchable-scale": "^2.2.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
