--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-global-props": "^1.1.5",
     "react-native-reanimated": "~3.6.2",
     "react-native-touchable-scale": "^2.2.0",
     "react-navigation": "^5.0.0"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-global-props": "^1.1.6",
     "typescript": "^5.1.3"
   },
   "private": true
