📝 Update settings.json, app.json, eas.json, and package.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "arlimi",
         "nwiusnwk",
-        "Pressable"
+        "Pressable",
+        "sunrin"
     ]
 }
