--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "sunrin-arlimi",
-    "slug": "sunrin-arlimi",
+    "name": "선린라이프",
+    "slug": "sunrin-life",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
