📝 Update app slug in app.json

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "선린라이프",
-    "slug": "sunrin-life",
+    "slug": "sunrin-arlimi",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
