--- a/app.json
+++ b/app.json
@@ -32,6 +32,15 @@
       "eas": {
         "projectId": "91d97276-4d63-4c14-981e-f823f10b8b2a"
       }
-    }
+    },
+    "plugins": [
+      [
+        "@sentry/react-native/expo",
+        {
+          "organization": "sunrin",
+          "project": "sunrin-life"
+        }
+      ]
+    ]
   }
 }
