--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
+    "@sentry/react-native": "^5.20.0",
     "babel-preset-es2015": "^6.24.1",
     "expo": "~50.0.13",
     "expo-dev-client": "~3.3.10",
