📝 Add new words to cSpell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "arlimi",
+        "iamfiro",
+        "jwkwon",
         "nwiusnwk",
         "Pressable",
-        "sunrin"
+        "sunrin",
+        "wntjd"
     ]
 }
