📝 Add new words to cSpell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,14 @@
 {
     "cSpell.words": [
         "arlimi",
+        "firo",
         "iamfiro",
         "jwkwon",
         "nwiusnwk",
         "Pressable",
         "sunrin",
         "sunrint",
+        "tjdwn",
         "wntjd"
     ]
 }
