#2 ✨ Implemented food while loading ui and build food fetch logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "jwkwon",
         "nwiusnwk",
         "Pressable",
+        "slunch",
         "sunrin",
         "sunrint",
         "tjdwn",
