--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@sentry/react-native": "^5.20.0",
+    "axios": "^1.6.8",
     "babel-preset-es2015": "^6.24.1",
     "expo": "^50.0.0",
     "expo-dev-client": "~3.3.10",
