--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.73.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-root-toast": "^3.5.1",
@@ -37,6 +38,7 @@
     "@babel/preset-react": "^7.23.3",
     "@types/react": "~18.2.45",
     "@types/react-dom": "^18.2.22",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-loader": "^9.1.3",
     "babel-plugin-react-native-web": "^0.19.10",
